feat: add API feature fo login & adjust confirm password in API register
